fix: id:44818 table data was overlaping in add field in field template

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -22,7 +22,7 @@
     .tableDataWrap {
       display: inline-block;
       width: inherit;
-      white-space: nowrap;
+      white-space: break-spaces;
       text-overflow: ellipsis;
       overflow: hidden;
     }
